--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -4,11 +4,35 @@
     <title>{{title}}</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
         crossorigin="anonymous">
-    <link rel='stylesheet' type='text/css' src='/static/css/style.css'>
+    <link rel='stylesheet' type='text/css' src='/css/style.css'>
 </head>
 
 <body>
     {{{body}}}
+    <style>
+        body {
+            font-family: 'Lato';
+            font-size: 1.4em;
+            background-color: #495057;
+        }
+        .assignment-header {
+            
+        }
+        .homeworkItem {
+            cursor: pointer;
+            box-shadow: 0px 2px 10px 0px black;
+            color: #adb5bd;
+            background-color: #495057;
+            border-radius: 5px;
+            text-align: center;
+            padding: 0.1em;
+            width: 10em;
+            height: 1.5em;
+        }
+        a {
+            color: rgb(199, 199, 199);
+            text-decoration: none;
+        }
 </body>
 
 </html>
