--- a/views/structure.hbs
+++ b/views/structure.hbs
@@ -2,11 +2,13 @@
     {{#each homeworks}}
     <div class='assignment'>
         <div class='assignment-header'>
-            <i class='fas fa-folder'></i> Assignment {{@index}}
+            <i style='color: #495057' class='fas fa-folder'></i> Assignment {{@index}}
         </div>
     <br>
         {{#each this as |homework|}} 
-            <i class='fab fa-java'></i> <a href='../downloadHomework/{{homework.link}}'>{{homework.filename}}</a>
+            <div class='homeworkItem'>
+                <i class='fab fa-java'></i> <a href='../downloadHomework/{{homework.link}}'>{{homework.filename}}</a>
+            </div>
             <br>
         {{/each}}
         <br>
