--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -15,19 +15,43 @@
             font-size: 1.4em;
             background-color: #495057;
         }
-        .assignment-header {
-            
+
+        .homeworkContainer {
+            display: flex;
         }
+
+        .assignment {
+            border: rgb(34, 34, 34) 0.2em solid;
+        }
+        .assignmentHeader {
+            text-align: center;
+            background-color: hsl(207, 9%, 46%);
+        }
+
+        .assignmentBody {
+            display: flex;
+            margin-top: -1em;
+            padding: 1em;
+        }
+
         .homeworkItem {
+            margin: 1em;
             cursor: pointer;
             box-shadow: 0px 2px 10px 0px black;
             color: #adb5bd;
-            background-color: #495057;
+            background-color: hsl(210, 9%, 31%);
             border-radius: 5px;
-            text-align: center;
-            padding: 0.1em;
+            text-align: left;
+            padding: 0.2em;
             width: 10em;
             height: 1.5em;
+        }
+
+        .homeworkIcons {
+            float: right;
+        }
+        .homeworkIcons > i, .homeworkIcons > a {
+            margin-right: 0.5em;
         }
         a {
             color: rgb(199, 199, 199);
