--- a/views/structure.hbs
+++ b/views/structure.hbs
@@ -1,17 +1,22 @@
-<div>
+<div class='homeworkContainer'>
     {{#each homeworks}}
     <div class='assignment'>
-        <div class='assignment-header'>
-            <i style='color: #495057' class='fas fa-folder'></i> Assignment {{@index}}
+        <div class='assignmentHeader'>
+            <i class='fas fa-folder'></i> Assignment {{increment @index}}
         </div>
-    <br>
-        {{#each this as |homework|}} 
-            <div class='homeworkItem'>
-                <i class='fab fa-java'></i> <a href='../downloadHomework/{{homework.link}}'>{{homework.filename}}</a>
-            </div>
-            <br>
-        {{/each}}
         <br>
+        <div class='assignmentBody'>
+            {{#each this as |homework|}}
+            <div class='homeworkItem'>
+                <span class='homeworkName'><i class='fab fa-java'></i> {{homework.filename}}</span>
+                <span class='homeworkIcons'>
+                    <i class='fas fa-eye'></i>
+                    <a href={{this.link}}><i class='fas fa-download'></i></a>
+                </span>
+            </div>
+            {{/each}}
         </div>
+        <br>
+    </div>
     {{/each}}
 </div>
