--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -36,7 +36,6 @@
 
         .homeworkItem {
             margin: 1em;
-            cursor: pointer;
             box-shadow: 0px 2px 10px 0px black;
             color: #adb5bd;
             background-color: hsl(210, 9%, 31%);
@@ -44,7 +43,12 @@
             text-align: left;
             padding: 0.2em;
             width: 10em;
-            height: 1.5em;
+            height: 1.2em;
+        }
+
+        .homeworkName {
+            margin-bottom: -1em;
+            font-size: 0.8em;
         }
 
         .homeworkIcons {
