--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -20,9 +20,20 @@
             display: flex;
         }
 
+        .upload {
+            position: absolute;
+            bottom: 0px;
+            left: 0px;
+        }
+
+        .homeworkItem:hover {
+            background-color: rgb(129, 129, 129);
+        }
+
         .assignment {
             border: rgb(34, 34, 34) 0.2em solid;
         }
+
         .assignmentHeader {
             text-align: center;
             background-color: hsl(207, 9%, 46%);
@@ -35,6 +46,7 @@
         }
 
         .homeworkItem {
+            transition: background-color ease 0.5s;
             margin: 1em;
             box-shadow: 0px 2px 10px 0px black;
             color: #adb5bd;
@@ -54,13 +66,38 @@
         .homeworkIcons {
             float: right;
         }
-        .homeworkIcons > i, .homeworkIcons > a {
+
+        .homeworkIcons>i,
+        .homeworkIcons>a {
             margin-right: 0.5em;
         }
+
+        .upload {
+            height: 2em;
+        }
+
+        label {
+            cursor: pointer;
+            text-align: center;
+        }
+
+        #file {
+            display: none;
+        }
+
         a {
             color: rgb(199, 199, 199);
             text-decoration: none;
         }
+</style>
+    <script type='text/javascript'>
+        const uploadButton = document.getElementById('file');
+        uploadButton.addEventListener('change', (e) => {
+            const fileName = uploadButton.value;
+            const fileSelectedText = document.getElementById('fileSelected');
+            fileSelectedText.innerText = fileName;
+        });
+    </script>
 </body>
 
 </html>
