--- a/views/structure.hbs
+++ b/views/structure.hbs
@@ -24,5 +24,5 @@
     <label for='file' id='uploadButton' class='homeworkItem'>Upload</label>
     <span id='fileSelected'></span>
     <input multiple id='file' name='file' type='file' />
-    <input type='submit' value='Upload homework'>
+    <input type='submit' value='Submit'>
 </form>
