Fixed uploaded files not containing buffer. Updated layout

--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -17,7 +17,7 @@
         }
 
         .homeworkContainer {
-            display: flex;
+            display: block;
         }
 
         .upload {
@@ -31,6 +31,7 @@
         }
 
         .assignment {
+            display: flex;
             border: rgb(34, 34, 34) 0.2em solid;
         }
 
