--- a/views/structure.hbs
+++ b/views/structure.hbs
@@ -2,7 +2,7 @@
     {{#each homeworks}}
     <div class='assignment'>
         <div class='assignmentHeader'>
-            <i class='fas fa-folder'></i> Assignment {{increment @index}}
+            <i class='fas fa-folder'></i> HW{{increment @index}}
         </div>
         <br>
         <div class='assignmentBody'>
