--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -17,6 +17,7 @@
         }
 
         .homeworkContainer {
+            margin: 2em;
             display: block;
         }
 
@@ -27,41 +28,49 @@
         }
 
         .homeworkItem:hover {
-            background-color: rgb(129, 129, 129);
+            /* background-color: rgb(129, 129, 129); */
         }
 
         .assignment {
+            height: 5em;
+            border-radius: 15px;
             display: flex;
-            border: rgb(34, 34, 34) 0.2em solid;
+            border: rgb(34, 34, 34) 7px solid;
+            margin: 9px;
         }
 
         .assignmentHeader {
+            padding: 1em;
+            border-radius: 12px 0px 0px 12px;
+            line-height: 3em;
+            width: 2.5%;
             text-align: center;
             background-color: hsl(207, 9%, 46%);
         }
 
         .assignmentBody {
+            /* overflow: -webkit-paged-x; */
             display: flex;
             margin-top: -1em;
             padding: 1em;
         }
 
         .homeworkItem {
-            transition: background-color ease 0.5s;
+            transition: background-color ease 0.2s;
             margin: 1em;
             box-shadow: 0px 2px 10px 0px black;
             color: #adb5bd;
             background-color: hsl(210, 9%, 31%);
             border-radius: 5px;
             text-align: left;
-            padding: 0.2em;
-            width: 10em;
+            padding: 1em 0em 1em 1em;
+            width: 12em;
             height: 1.2em;
         }
 
         .homeworkName {
             margin-bottom: -1em;
-            font-size: 0.8em;
+            font-size: 1em;
         }
 
         .homeworkIcons {
@@ -70,7 +79,7 @@
 
         .homeworkIcons>i,
         .homeworkIcons>a {
-            margin-right: 0.5em;
+            margin-right: 0.3em;
         }
 
         .upload {
@@ -90,6 +99,38 @@
             color: rgb(199, 199, 199);
             text-decoration: none;
         }
+
+        input[type='submit'] {
+            box-shadow: 0px 2px 10px 0px black;
+            border: none;
+            color: #adb5bd;
+            padding: 6px 12px;
+            font-size: 1em;
+            width: 5em;
+            height: 2em;
+            transition: all ease 0.5s;
+            border-radius: 5px;
+            cursor: pointer;
+            background-color: hsl(210, 9%, 31%);
+        }
+
+        input[type='submit']:hover {
+            background-color: rgb(129, 129, 129);
+        }
+
+        .fas {
+            font-size: 1.3em;
+            transition: all ease 0.2s;
+        }
+
+        .fas:not(.fa-folder):hover {
+            color: hsl(206, 9%, 45%);
+        }
+
+        label {
+            padding: 1em !important;
+        }
+
 </style>
     <script type='text/javascript'>
         const uploadButton = document.getElementById('file');
